tenzir/functional-test/data/reference/pipelines_local/test_Chart_Attributes/step_05.ref
error: could not parse `chart` operator
 --> <input>:1:24
  |
1 | from stdin read json | chart donuttt value=b
  |                        ^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: !! syntax_error: invalid chart type `donuttt`, allowed types are: `stacked-area`, `donut`, and `bar`